# api/docs/swagger.json
@@ -13,33 +13,6 @@
     "host": "localhost:8080",
     "basePath": "/auth",
     "paths": {
-        "/": {
-            "get": {
-                "description": "generates new access token gets token from header",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "refreshes token",
-                "operationId": "refresh",
-                "responses": {
-                    "200": {
-                        "description": "if Access token fails it will returns this",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Something went wrong in server",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/login": {
             "post": {
                 "description": "checks the user and returns tokens",
@@ -172,6 +145,44 @@
                 }
             }
         },
+        "/refreshtoken": {
+            "get": {
+                "description": "generates new access token gets token from header",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "refreshes token",
+                "operationId": "refresh",
+                "parameters": [
+                    {
+                        "description": "Token",
+                        "name": "token",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.Refreshtoken"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "if Access token fails it will returns this",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Something went wrong in server",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "Registers user",
@@ -215,6 +226,14 @@
         }
     },
     "definitions": {
+        "auth.Refreshtoken": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "auth.RestoreProfile": {
             "type": "object",
             "properties": {
